<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:background="@android:color/transparent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:id="@+id/close"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:text="@string/price_dialog_titile"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <TextView
                        style="@style/weekPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/sun" />

                    <EditText
                        android:id="@+id/et_son"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center"

                        android:hint="00.00"
                        android:inputType="number"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="@string/rial" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <TextView
                        style="@style/weekPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/mon" />

                    <EditText
                        android:id="@+id/et_mon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center"
                        android:hint="00.00"
                        android:inputType="number"

                        android:padding="4dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="@string/rial" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <TextView
                        style="@style/weekPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tue" />

                    <EditText
                        android:id="@+id/et_tue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center"

                        android:hint="00.00"
                        android:inputType="number"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="@string/rial" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <TextView
                        style="@style/weekPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="الاربعاء" />

                    <EditText
                        android:id="@+id/et_wed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center"

                        android:hint="00.00"
                        android:inputType="number"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="@string/rial" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <TextView
                        style="@style/weekPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/thu" />

                    <EditText
                        android:id="@+id/et_thu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center"
                        android:hint="00.00"
                        android:inputType="number"


                        android:padding="4dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="@string/rial" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <TextView
                        style="@style/weekPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/fri" />

                    <EditText
                        android:id="@+id/et_fri"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center"
                        android:hint="00.00"
                        android:inputType="number"

                        android:padding="4dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="@string/rial" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <TextView
                        style="@style/weekPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/sat" />

                    <EditText
                        android:id="@+id/et_sat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center"
                        android:hint="00.00"
                        android:inputType="number"
                        android:padding="4dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:text="@string/rial" />

                </LinearLayout>


                <Button
                    android:id="@+id/btn_agree"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:background="@drawable/btn_blue"
                    android:text="@string/agree"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</FrameLayout>