<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:background="@android:color/transparent"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:id="@+id/close"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close" />


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rest_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/add_ratting_dialog"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/darker_gray" />

                <!--<tech.willy.ratingbar.RotationRatingBar-->
                <!--android:id="@+id/rotationratingbar_main"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginTop="16dp">-->
                <!--</tech.willy.ratingbar.RotationRatingBar>-->

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/rating_bar"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="false"
                    android:rotation="180"
                    android:scaleX="1.1"
                    android:scaleY="1.1"
                    android:stepSize=".5"
                    android:theme="@style/RatingBar" />

                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_background"
                    android:gravity="top"
                    android:hint="@string/add_ratting"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_rate"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_blue"
                    android:text="@string/rate"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>